samples/_failures_safe/1761479478_8a2c5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce8843f1.c: In function ‘main’:
./samples/SAFE/__tmp_ce8843f1.c:152:43: error: missing terminating " character
  152 |                     print_matrix(&result, "A
      |                                           ^~
./samples/SAFE/__tmp_ce8843f1.c:152:21: error: expected expression at end of input
  152 |                     print_matrix(&result, "A
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_ce8843f1.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce8843f1.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce8843f1.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce8843f1.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce8843f1.c:152:21: error: expected declaration or statement at end of input
